專案結構說明

--- a/ContosoPizza/Pages/Shared/_Layout.cshtml
+++ b/ContosoPizza/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@* 這是 _ViewStart.cshtml 檔案所指定 的 版面配置。 
+實作跨多個網頁的通用版面配置元素。 *@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
