--- a/ContosoPizza/Pages/_ViewImports.cshtml
+++ b/ContosoPizza/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ContosoPizza
 @namespace ContosoPizza.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@* 匯入 跨多個頁面  使用 的 命名空間 和 類別。 *@
