--- a/ContosoPizza/Pages/Shared/_ValidationScriptsPartial.cshtml
+++ b/ContosoPizza/Pages/Shared/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,3 @@
 ﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+@* 提供所有頁面驗證功能。 *@
