--- a/ContosoPizza/Pages/Shared/_Layout.cshtml
+++ b/ContosoPizza/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/PizzaList">Pizza List 🍕</a>
+                            @* 將 PizzaList 頁面 的 連結 新增至 導覽功能表（asp-page="/PizzaList"） *@
+                        </li>
                     </ul>
                 </div>
             </div>
